--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <br>
         <br>
         <br>
-        <img src="Gallery/The Twins.png" width="25%" height="25%">
+        <img src="Gallery/Main Twins.png" width="50%" height="50%">
         </p>
     </body>
 </html>
