--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             </style>
     </head>
     <body style="font-family: Mara;background-color:#fbffff;">
+        <img src="Logo.png" width="50%" height="50%">
+        <h1 style="text-align:center;">A web series</h1>
+        <p style="text-align:center;">
+        Raxick is about two Raxerick twins named Sky and Emerald Intera, who's fates together with their colony ship's crew is being twisted by unforcseen events. Everything's counted for solely on the Intera twins thanks to Raxer believes.<br
+        <br>
+        <br>
+        <br>
         
-        <p style="text-align:center;">WIP<br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <img src="Gallery/Main Twins.png" width="50%" height="50%">
         </p>
     </body>
 </html>
